Improve code for dusan's method, add integration of cos angles using trapz

--- a/pleng_dusan_method.ipynb
+++ b/pleng_dusan_method.ipynb
@@ -58,10 +58,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eucledian_dist(x, pleng):\n",
-    "    return 4 * pleng * x * (1 - (2 * pleng / x)) * (1 - np.exp(-x / (2 * pleng)))\n",
-    "\n",
-    "\n",
     "def dusanpleng(\n",
     "    points: np.ndarray, maximum_length_nm: float, plot=False, log_angle_warnings=True, log_details=False\n",
     ") -> tuple[float, float]:\n",
@@ -209,6 +205,291 @@
     "\n",
     "\n",
     "_, _ = dusanpleng(spline_coords, maximum_length_nm=70, plot=True, log_details=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def correlations(points, maximum_length_nm, log_angle_warnings=False, log_details=False, plot=False):\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "        ax.plot(points[:, 1], points[:, 0], c=\"red\")\n",
+    "        ax.scatter(points[0, 1], points[0, 0], c=\"blue\")\n",
+    "\n",
+    "    current_distance = 0\n",
+    "\n",
+    "    distance_cos_angle_pairs = {}\n",
+    "    distances = []\n",
+    "    cos_angles = []\n",
+    "\n",
+    "    # iterate over each point\n",
+    "    first_vector = points[1] - points[0]\n",
+    "    first_point = points[0]\n",
+    "    first_vector /= np.linalg.norm(first_vector)\n",
+    "    for point_index, point in enumerate(points):\n",
+    "        if point_index == 0:\n",
+    "            # Skip the first point completely since we can't calculate a vector yet.\n",
+    "            # Don't even add the distance to the dictionary\n",
+    "            continue\n",
+    "        if point_index == len(points) - 1:\n",
+    "            # don't include the last set of points since they're not complete\n",
+    "            break\n",
+    "        vector = point - points[point_index - 1]\n",
+    "        vector_distance = np.linalg.norm(vector)\n",
+    "        current_distance += vector_distance\n",
+    "        vector /= vector_distance\n",
+    "        cos_angle = np.dot(first_vector, vector)\n",
+    "        # Check for bad angles (for cos(angle))\n",
+    "        if log_angle_warnings:\n",
+    "            if cos_angle == 0:\n",
+    "                print(\"[warning] cos(angle) is orthogonal to first vector, can't be fitted to log plot\")\n",
+    "            elif cos_angle < 0:\n",
+    "                print(\"[warning] cos(angle) is negative, can't be fitted to log plot\")\n",
+    "\n",
+    "        if current_distance > maximum_length_nm:\n",
+    "            # reset this section and add stats to dictionary\n",
+    "            first_vector = vector\n",
+    "            first_point = point\n",
+    "            current_distance = 0\n",
+    "            # add the distances and cos angles to the list\n",
+    "            distance_cos_angle_pairs[point_index] = {\n",
+    "                \"distances\": distances,\n",
+    "                \"cos_angles\": cos_angles,\n",
+    "            }\n",
+    "            distances = []\n",
+    "            cos_angles = []\n",
+    "            if plot:\n",
+    "                ax.scatter(point[1], point[0], c=\"green\")\n",
+    "        else:\n",
+    "            if plot:\n",
+    "                ax.scatter(point[1], point[0], c=\"blue\", s=1)\n",
+    "            distances.append(current_distance)\n",
+    "            cos_angles.append(cos_angle)\n",
+    "\n",
+    "    if plot:\n",
+    "        ax.set_aspect(\"equal\")\n",
+    "        plt.show()\n",
+    "\n",
+    "    # plot the distances and cos angles\n",
+    "    if plot:\n",
+    "        fig, ax = plt.subplots()\n",
+    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "        distances = distance_cos_angle_pair[\"distances\"]\n",
+    "        cos_angles = distance_cos_angle_pair[\"cos_angles\"]\n",
+    "        if plot:\n",
+    "            ax.plot(distances, cos_angles, label=f\"point {point_index}\")\n",
+    "    if plot:\n",
+    "        # put the legend to the rhs of the plot and wrap it do it doesn't go off the screen\n",
+    "        ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
+    "        plt.show()\n",
+    "\n",
+    "    # # calculate the average of the cos angles, but since they are all at different distances, resample to use common\n",
+    "    # # distances, we need to ditch any points that are outside the smallest range of distances\n",
+    "    # average_cos_angles = []\n",
+    "    # # find the smallest range of distances\n",
+    "    # largest_minimum = -np.inf\n",
+    "    # smallest_maximum = np.inf\n",
+    "    # if len(distance_cos_angle_pairs) == 0:\n",
+    "    #     raise ValueError(\"no points found\")\n",
+    "    # for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "    #     distances = distance_cos_angle_pair[\"distances\"]\n",
+    "    #     smallest_distance = np.min(distances)\n",
+    "    #     largest_distance = np.max(distances)\n",
+    "    #     if smallest_distance > largest_minimum:\n",
+    "    #         largest_minimum = smallest_distance\n",
+    "    #     if largest_distance < smallest_maximum:\n",
+    "    #         smallest_maximum = largest_distance\n",
+    "    # if largest_minimum == -np.inf or smallest_maximum == np.inf:\n",
+    "    #     raise ValueError(\"no common range of distances found\")\n",
+    "    # common_distances = np.arange(largest_minimum, smallest_maximum, 0.1)\n",
+    "    # if log_details:\n",
+    "    #     print(f\"common distances shape: {common_distances.shape}\")\n",
+    "    # # resample each set of distances and cos angles to the common distances\n",
+    "    # if plot:\n",
+    "    #     fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "    # for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "    #     distances = distance_cos_angle_pair[\"distances\"]\n",
+    "    #     cos_angles = distance_cos_angle_pair[\"cos_angles\"]\n",
+    "    #     interpolated_cos_angles = np.interp(common_distances, distances, cos_angles)\n",
+    "    #     average_cos_angles.append(interpolated_cos_angles)\n",
+    "    #     if plot:\n",
+    "    #         ax.plot(common_distances, interpolated_cos_angles, label=f\"point {point_index}\")\n",
+    "\n",
+    "    # if plot:\n",
+    "    #     ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5), ncol=len(distance_cos_angle_pairs) // 4)\n",
+    "    #     plt.show()\n",
+    "\n",
+    "    # average_cos_angles = np.mean(average_cos_angles, axis=0)\n",
+    "\n",
+    "    # if plot:\n",
+    "    #     fig, ax = plt.subplots()\n",
+    "    #     ax.plot(common_distances, average_cos_angles)\n",
+    "    #     plt.title(\"average cos angles\")\n",
+    "    #     plt.show()\n",
+    "\n",
+    "    # return just a list of cos angles and their distances\n",
+    "    # unpack from dictionary\n",
+    "    distances = []\n",
+    "    cos_angles = []\n",
+    "    for point_index, distance_cos_angle_pair in distance_cos_angle_pairs.items():\n",
+    "        distances.extend(distance_cos_angle_pair[\"distances\"])\n",
+    "        cos_angles.extend(distance_cos_angle_pair[\"cos_angles\"])\n",
+    "    return distances, cos_angles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate average over all molecules before plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_types = [\n",
+    "    \"magnesium-unknot-plasmid-nicked\",\n",
+    "    \"magnesium-unknot-plasmid-supercoiled\",\n",
+    "    \"nickel-relaxed\",\n",
+    "    \"nickel-supercoiled\",\n",
+    "]\n",
+    "data_dir_prefix = \"/Users/sylvi/topo_data/pleng/topology-data-check/processed-data-\"\n",
+    "maximum_length_nm = 150\n",
+    "maximum_px_to_nm = 1.0\n",
+    "use_grains_with_only_one_molecule = True\n",
+    "assert data_dir.exists()\n",
+    "\n",
+    "results_dict = {}\n",
+    "\n",
+    "for sample_type in sample_types:\n",
+    "    results_dict[sample_type] = {}\n",
+    "    data_dir = Path(data_dir_prefix + sample_type)\n",
+    "    assert data_dir.exists()\n",
+    "    # Find topostats files\n",
+    "    topostats_files = list(data_dir.glob(\"*.topostats\"))\n",
+    "    for topostats_file in topostats_files:\n",
+    "        with h5py.File(topostats_file, \"r\") as f:\n",
+    "            results_dict[sample_type][topostats_file] = {}\n",
+    "            image_data = hdf5_to_dict(f, group_path=\"/\")\n",
+    "            if \"splining\" not in image_data:\n",
+    "                continue\n",
+    "            spline_data = image_data[\"splining\"][\"above\"]\n",
+    "            p_to_nm = image_data[\"pixel_to_nm_scaling\"]\n",
+    "            image = image_data[\"image\"]\n",
+    "            if p_to_nm > maximum_px_to_nm:\n",
+    "                print(f\"skipping {topostats_file} due to pixel to nm scaling of {p_to_nm} too high\")\n",
+    "                continue\n",
+    "            for grain_index, grain_data in spline_data.items():\n",
+    "                results_dict[sample_type][topostats_file][grain_index] = {}\n",
+    "                if use_grains_with_only_one_molecule:\n",
+    "                    if len(grain_data) != 1:\n",
+    "                        continue\n",
+    "                for molecule_index, molecule_data in grain_data.items():\n",
+    "                    results_dict[sample_type][topostats_file][grain_index][molecule_index] = {}\n",
+    "                    spline_coords = molecule_data[\"spline_coords\"] * p_to_nm\n",
+    "                    distances, cos_angles = correlations(\n",
+    "                        spline_coords, maximum_length_nm, log_angle_warnings=False, plot=False\n",
+    "                    )\n",
+    "                    results_dict[sample_type][topostats_file][grain_index][molecule_index][\"distances\"] = distances\n",
+    "                    results_dict[sample_type][topostats_file][grain_index][molecule_index][\"cos_angles\"] = cos_angles\n",
+    "\n",
+    "\n",
+    "# Do this for each sample type\n",
+    "for sample_type, sample_type_results in results_dict.items():\n",
+    "\n",
+    "    print(f\"sample type: {sample_type}\")\n",
+    "\n",
+    "    # Quick and dirty way to calculate average cos angles over distance\n",
+    "    distance_bin_delta = 0.2\n",
+    "    distance_bins = np.arange(0, maximum_length_nm, distance_bin_delta)\n",
+    "    average_cos_angles = np.zeros_like(distance_bins)\n",
+    "    count_cos_angles = np.zeros_like(distance_bins)\n",
+    "    # Plot scatter of all cos angles vs distances\n",
+    "    fig, ax = plt.subplots()\n",
+    "    for topostats_file, topostats_file_data in sample_type_results.items():\n",
+    "        for grain_index, grain_data in topostats_file_data.items():\n",
+    "            for molecule_index, molecule_data in grain_data.items():\n",
+    "                distances = molecule_data[\"distances\"]\n",
+    "                cos_angles = molecule_data[\"cos_angles\"]\n",
+    "                ax.scatter(distances, cos_angles, s=0.5)\n",
+    "\n",
+    "                # bin the cos angles\n",
+    "                for distance, cos_angle in zip(distances, cos_angles):\n",
+    "                    bin_index = int(distance // distance_bin_delta)\n",
+    "                    average_cos_angles[bin_index] += cos_angle\n",
+    "                    count_cos_angles[bin_index] += 1\n",
+    "    plt.xlabel(\"distance (nm)\")\n",
+    "    plt.ylabel(\"cos(angle)\")\n",
+    "    plt.title(f\"cos angles for {sample_type}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Calculate the average cos angles\n",
+    "    average_cos_angles /= count_cos_angles\n",
+    "    # Plot the average cos angles\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.scatter(distance_bins, average_cos_angles, s=0.5)\n",
+    "    plt.xlabel(\"distance (nm)\")\n",
+    "    plt.ylabel(\"average cos(angle)\")\n",
+    "    plt.title(f\"average cos angles, {sample_type}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # in order to fit, need to remove any zeros or negatives\n",
+    "    average_cos_angles_no_negatives = average_cos_angles[average_cos_angles > 0]\n",
+    "    distance_bins_no_negatives = distance_bins[average_cos_angles > 0]\n",
+    "\n",
+    "    # drop nans\n",
+    "    average_cos_angles_no_negatives_no_nans = average_cos_angles_no_negatives[\n",
+    "        ~np.isnan(average_cos_angles_no_negatives)\n",
+    "    ]\n",
+    "    distance_bins_no_negatives_no_nans = distance_bins_no_negatives[~np.isnan(average_cos_angles_no_negatives)]\n",
+    "\n",
+    "    average_cos_angles = average_cos_angles_no_negatives_no_nans\n",
+    "    distance_bins = distance_bins_no_negatives_no_nans\n",
+    "\n",
+    "    # Integrate over the average cos angles - note: they're noisy datapoints but try anyway\n",
+    "    # To integrate over discrete data without fitting a curve, use the trapezoidal rule\n",
+    "    integral = np.trapz(average_cos_angles, x=distance_bins)\n",
+    "    print(f\"integral: {integral}\")\n",
+    "\n",
+    "    # Fit this to e^-x/p\n",
+    "    def exp_fit(x, p):\n",
+    "        return np.exp(-x / p)\n",
+    "\n",
+    "    popt, pcov = curve_fit(exp_fit, distance_bins, average_cos_angles)\n",
+    "    print(f\"popt: {popt}\")\n",
+    "    print(f\"pcov: {pcov}\")\n",
+    "\n",
+    "    # Plot the fit\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.scatter(distance_bins, average_cos_angles, s=0.5)\n",
+    "    ax.plot(distance_bins, exp_fit(distance_bins, *popt), label=\"fit\")\n",
+    "    plt.xlabel(\"distance (nm)\")\n",
+    "    plt.ylabel(\"average cos(angle)\")\n",
+    "    plt.title(f\"average cos angles, {sample_type}\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Also calculate the sum of the cos angles\n",
+    "    sum_cos_angles = np.sum(average_cos_angles)\n",
+    "    print(f\"sum of cos angles: {sum_cos_angles}\")\n",
+    "    # divide by the number of points to get the average\n",
+    "    average_sum_cos_angles = sum_cos_angles / len(average_cos_angles)\n",
+    "    print(f\"average sum of cos angles: {average_sum_cos_angles}\")\n",
+    "\n",
+    "    # plot cumulative sum\n",
+    "    cumsum_cos_angles = np.cumsum(average_cos_angles)\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(distance_bins, cumsum_cos_angles)\n",
+    "    plt.title(\"cumsum cos angles\")\n",
+    "    plt.xlabel(\"distance (nm)\")\n",
+    "    plt.ylabel(\"cumulative sum of cos(angle)\")\n",
+    "    plt.title(f\"cumulative sum of cos angles, {sample_type}\")\n",
+    "    plt.show()"
    ]
   }
  ],
