Update plot labels

--- a/pleng.ipynb
+++ b/pleng.ipynb
@@ -446,7 +446,8 @@
    "outputs": [],
    "source": [
     "# See what happens to a dataset when changing maximum length\n",
-    "sample_type = \"magnesium-unknot-plasmid-nicked\"\n",
+    "# sample_type = \"magnesium-unknot-plasmid-nicked\"\n",
+    "sample_type = \"magnesium-unknot-plasmid-supercoiled\"\n",
     "data_dir = Path(f\"/Users/sylvi/topo_data/pleng/topology-data-check/processed-data-{sample_type}\")\n",
     "maximum_px_to_nm = 1.0\n",
     "use_grains_with_only_one_molecule = True\n",
@@ -530,38 +531,42 @@
     "\n",
     "\n",
     "# plot kde of plengs in results\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
     "for sample_type, data in results.items():\n",
     "    plengs = data[\"plengs\"]\n",
     "    sns.kdeplot(\n",
     "        plengs,\n",
-    "        label=f\" {sample_type}\\n   | n: {len(plengs)}\\n   | mean: {np.mean(plengs):.2f} | std: {np.std(plengs):.2f} |\\n\",\n",
+    "        # label=f\" {sample_type}\\n   | n: {len(plengs)}\\n   | mean: {np.mean(plengs):.2f} | std: {np.std(plengs):.2f} |\\n\",\n",
+    "        label=f\" {sample_type}\\n    n: {len(plengs)} \",\n",
     "        ax=ax,\n",
     "    )\n",
-    "plt.legend()\n",
+    "# force the legend to be outside the plot\n",
+    "plt.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
     "plt.title(f\"plengs L={maximum_length_nm}\")\n",
     "plt.xlabel(\"pleng (nm)\")\n",
     "plt.ylabel(\"density\")\n",
     "plt.show()\n",
     "\n",
     "# plot another kde but using samples that contain nickel and samples that contain magnesium as the two groups\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
     "nickel_plengs = results[\"nickel-relaxed\"][\"plengs\"] + results[\"nickel-supercoiled\"][\"plengs\"]\n",
     "magnesium_plengs = (\n",
     "    results[\"magnesium-unknot-plasmid-nicked\"][\"plengs\"] + results[\"magnesium-unknot-plasmid-supercoiled\"][\"plengs\"]\n",
     ")\n",
     "sns.kdeplot(\n",
     "    nickel_plengs,\n",
-    "    label=f\"nickel\\n n:{len(nickel_plengs)}\\n mean: {np.mean(nickel_plengs):.2f} std: {np.std(nickel_plengs):.2f}\",\n",
+    "    # label=f\"nickel\\n n:{len(nickel_plengs)}\\n mean: {np.mean(nickel_plengs):.2f} std: {np.std(nickel_plengs):.2f}\",\n",
+    "    label=f\"nickel\\n n:{len(nickel_plengs)}\",\n",
     "    ax=ax,\n",
     ")\n",
     "sns.kdeplot(\n",
     "    magnesium_plengs,\n",
-    "    label=f\"magnesium\\n n:{len(magnesium_plengs)}\\n mean: {np.mean(magnesium_plengs):.2f} std: {np.std(magnesium_plengs):.2f}\",\n",
+    "    # label=f\"magnesium\\n n:{len(magnesium_plengs)}\\n mean: {np.mean(magnesium_plengs):.2f} std: {np.std(magnesium_plengs):.2f}\",\n",
+    "    label=f\"magnesium\\n n:{len(magnesium_plengs)}\",\n",
     "    ax=ax,\n",
     ")\n",
     "plt.legend()\n",
-    "plt.title(\"nickel vs magnesium plengs\")\n",
+    "plt.title(f\"nickel vs magnesium plengs L={maximum_length_nm}\")\n",
     "plt.xlabel(\"pleng (nm)\")\n",
     "plt.ylabel(\"density\")\n",
     "plt.show()"
