--- a/topostats/perovskites.ipynb
+++ b/topostats/perovskites.ipynb
@@ -22,17 +22,20 @@
     "from topostats.filters import Filters\n",
     "from topostats.plottingfuncs import Colormap\n",
     "\n",
+    "# Plotting colourmap range\n",
     "colormap = Colormap()\n",
     "CMAP = colormap.get_cmap()\n",
     "VMIN = None\n",
     "VMAX = None\n",
     "\n",
+    "# Data directory\n",
     "DATA_DIR = Path(\"/Users/sylvi/topo_data/perovskite/textured_silicon/\")\n",
     "files = list(DATA_DIR.glob(\"*\"))\n",
     "logger.info(f\"Found {len(files)} files in {DATA_DIR}\")\n",
     "for file in files:\n",
     "    logger.info(file)\n",
     "\n",
+    "# Load the data from the files.\n",
     "loadscans = LoadScans(files, channel=\"Height Sensor\")\n",
     "loadscans.get_data()\n",
     "image_dictionaries = loadscans.img_dict\n",
@@ -45,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Flatten the images that we have\n",
     "flattened_images = {}\n",
     "for filename, topostats_object in image_dictionaries.items():\n",
     "    filename = Path(filename).name\n",
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# perform a frequency split\n",
+    "# perform a frequency split in python based on the gwyddion code\n",
     "image: dict = flattened_images[list(flattened_images.keys())[0]]\n",
     "\n",
     "\n",
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,11 +278,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note: Gwyddion uses the error function to produce a smooth mask bounary rather than a binary mask for the filters. I've tried the same approach here"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Testing the function\n",
+    "\n",
     "image_index = 0\n",
     "filename = list(flattened_images.keys())[image_index]\n",
     "image_dict = flattened_images[filename]\n",
@@ -348,10 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a frequency mask to filter out lower frequencies\n",
     "def create_mask(shape: (int, int), low_pass_filter_px: float):\n",
     "    rows, cols = shape\n",
     "    # Create a mask to remove the low frequency content\n",
@@ -370,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,19 +608,45 @@
     "        plt.show()\n",
     "\n",
     "    # Compute the 2D Fourier Transform of the image\n",
+    "    # Try Numpy's FFT\n",
     "    # dft = np.fft.fft2(extended_image)\n",
-    "    # use opencv for the fft instead\n",
+    "\n",
+    "    # Try opencv's FFT\n",
     "    # dft = cv2.dft(np.float32(extended_image), flags=cv2.DFT_COMPLEX_OUTPUT)\n",
+    "\n",
+    "    # Try pyfftw.interfaces.numpy_fft.fft2\n",
     "    dft = pyfftw.interfaces.numpy_fft.fft2(extended_image)\n",
+    "\n",
+    "    # Try pyfftw.FFTW\n",
+    "    fft_input = pyfftw.empty_aligned(extended_image.shape, dtype=\"complex128\")\n",
+    "    fft_output = pyfftw.empty_aligned(extended_image.shape, dtype=\"complex128\")\n",
+    "    ifft_output = pyfftw.empty_aligned(extended_image.shape, dtype=\"complex128\")\n",
+    "\n",
+    "    fft_object = pyfftw.FFTW(fft_input, fft_output, axes=(0, 1), direction=\"FFTW_FORWARD\")\n",
+    "    ifft_object = pyfftw.FFTW(fft_output, ifft_output, axes=(0, 1), direction=\"FFTW_BACKWARD\")\n",
+    "\n",
+    "    fft_input[:] = extended_image\n",
+    "    dft = fft_object()\n",
+    "\n",
     "    logger.info(f\"fft shape: {dft.shape}\")\n",
+    "\n",
     "    # Shift the zero frequency component to the center\n",
+    "    # Numpy\n",
     "    # dft_shift = np.fft.fftshift(dft)\n",
+    "    # FFTW.interfaces.numpy_fft.fftshift\n",
+    "    # dft_shift = pyfftw.interfaces.numpy_fft.fftshift(dft)\n",
+    "    # pyfftw.FFTW\n",
     "    dft_shift = pyfftw.interfaces.numpy_fft.fftshift(dft)\n",
     "\n",
     "    if debug:\n",
     "        # Display the magnitude spectrum\n",
+    "\n",
+    "        # For separate real and imaginary parts\n",
     "        # magnitude_spectrum = 20 * np.log(cv2.magnitude(dft_shift[:, :, 0], dft_shift[:, :, 1]))\n",
+    "\n",
+    "        # For combined magnitude\n",
     "        magnitude_spectrum = 20 * np.log(np.abs(dft_shift))\n",
+    "\n",
     "        plt.imshow(magnitude_spectrum, cmap=\"viridis\")\n",
     "        plt.title(\"Magnitude Spectrum\")\n",
     "        plt.show()\n",
@@ -643,9 +683,13 @@
     "            raise ValueError(f\"middle_fill_px {middle_fill_px} not recognised\")\n",
     "\n",
     "    # Apply the mask to the shifted Fourier Transform\n",
-    "    filtered_dft_shift = np.zeros_like(dft_shift)\n",
+    "\n",
+    "    # Separate real and imaginary parts\n",
+    "    # filtered_dft_shift = np.zeros_like(dft_shift)\n",
     "    # filtered_dft_shift[:, :, 0] = dft_shift[:, :, 0] * mask\n",
     "    # filtered_dft_shift[:, :, 1] = dft_shift[:, :, 1] * mask\n",
+    "\n",
+    "    # Combined real and imaginary parts\n",
     "    filtered_dft_shift = dft_shift * mask\n",
     "\n",
     "    if debug:\n",
@@ -657,13 +701,22 @@
     "        plt.show()\n",
     "\n",
     "    # Inverse shift the zero frequency component back\n",
+    "    # Numpy\n",
     "    # filtered_dft = np.fft.ifftshift(filtered_dft_shift)\n",
+    "    # pyfftw.interfaces.numpy_fft.ifftshift\n",
     "    filtered_dft = pyfftw.interfaces.numpy_fft.ifftshift(filtered_dft_shift)\n",
     "\n",
     "    # Compute the inverse Fourier Transform to get the filtered image\n",
+    "    # OpenCV\n",
     "    # filtered_image = cv2.idft(filtered_dft)\n",
-    "    filtered_image = pyfftw.interfaces.numpy_fft.ifft2(filtered_dft)\n",
+    "    # pyfftw.interfaces.numpy_fft.ifft2\n",
+    "    # filtered_image = pyfftw.interfaces.numpy_fft.ifft2(filtered_dft)\n",
+    "    # Separate real and imaginary parts\n",
     "    # filtered_image = cv2.magnitude(filtered_image[:, :, 0], filtered_image[:, :, 1])\n",
+    "    # filtered_image = np.abs(filtered_image)\n",
+    "    # pyfftw.FFTW\n",
+    "    fft_output[:] = filtered_dft\n",
+    "    filtered_image = ifft_object()\n",
     "    filtered_image = np.abs(filtered_image)\n",
     "\n",
     "    # Normalise the image by the number of pixels\n",
@@ -686,26 +739,26 @@
     "    return filtered_image, mask, subtracted\n",
     "\n",
     "\n",
-    "image_index = 0\n",
+    "image_index = 1\n",
     "filename = list(flattened_images.keys())[image_index]\n",
     "image_dict = flattened_images[filename]\n",
     "pixel_to_nm_scaling = image_dict[\"pixel_to_nm_scaling\"]\n",
     "logger.info(f\"File: {filename}\")\n",
     "\n",
-    "cutoff_wavelength_nm = 65\n",
+    "cutoff_wavelength_nm = 130\n",
     "filtered_image, mask, subtracted = apply_frequency_filter(\n",
     "    image_dict[\"original_image\"],\n",
     "    cutoff_wavelength_px=cutoff_wavelength_nm / pixel_to_nm_scaling,\n",
-    "    edge_width=0.10,\n",
+    "    edge_width=0.14,\n",
     "    mode=\"high\",\n",
     "    middle_fill_px=0,\n",
     "    debug=True,\n",
     ")\n",
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(24, 12))\n",
-    "ax[0].imshow(filtered_image, cmap=\"afmhot\", vmin=0, vmax=81.8)\n",
+    "ax[0].imshow(filtered_image, cmap=CMAP, vmin=0, vmax=81.8)\n",
     "ax[0].set_title(\"Filtered image\")\n",
-    "cbar = plt.colorbar(ax[0].imshow(filtered_image, cmap=\"afmhot\", vmin=VMIN, vmax=VMAX), ax=ax[0])\n",
+    "cbar = plt.colorbar(ax[0].imshow(filtered_image, cmap=CMAP, vmin=VMIN, vmax=VMAX), ax=ax[0])\n",
     "cbar.set_label(\"Height (nm)\")\n",
     "ax[1].imshow(subtracted, cmap=CMAP, vmin=VMIN, vmax=VMAX)\n",
     "ax[1].set_title(\"Subtracted image\")\n",
