--- a/notebooks/topostats_file_helper_example.ipynb
+++ b/notebooks/topostats_file_helper_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "from topostats.io import TopoFileHelper\n",
     "from IPython.display import clear_output\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from h5glance import H5Glance"
    ]
   },
   {
@@ -48,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Print the structure of the file\n",
-    "helper.pretty_print_structure()"
+    "H5Glance(file)"
    ]
   },
   {
