--- a/beaks.ipynb
+++ b/beaks.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
     "import pickle\n",
     "from datetime import datetime\n",
+    "from pathlib import Path\n",
     "\n",
-    "import numpy as np\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "from topostats.io import LoadScans\n",
     "\n",
@@ -255,6 +255,39 @@
     "    60,\n",
     "    63,\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for category, indices in categories.items():\n",
+    "    # print(f\"plotting category: {category} num images: {len(indices)}\")\n",
+    "    n_cols = 3\n",
+    "    n_rows = len(indices) // n_cols + 1\n",
+    "    fig, axs = plt.subplots(n_rows, n_cols, figsize=(10 * n_cols, 10 * n_rows))\n",
+    "    for plot_index, image_index in enumerate(indices):\n",
+    "        # print(f\"plotting plot index: {plot_index} image index: {image_index}\")\n",
+    "        ax = axs.flatten()[plot_index]\n",
+    "        image_data = image_dict[image_index]\n",
+    "        first_image_image = image_data[\"image\"]\n",
+    "        ax.imshow(first_image_image)\n",
+    "        first_image_mask = image_data[\"grain_masks\"][\"above\"]\n",
+    "        ax.imshow(first_image_mask[:, :, 1], alpha=0.2)\n",
+    "        if \"ordered_traces\" in image_data.keys():\n",
+    "            for grain_id, grain_data in image_data[\"ordered_traces\"][\"above\"].items():\n",
+    "                for molecule_id, molecule_data in grain_data.items():\n",
+    "                    bbox = molecule_data[\"bbox\"]\n",
+    "                    ordered_coords = molecule_data[\"ordered_coords\"]\n",
+    "                    heights = molecule_data[\"heights\"]\n",
+    "\n",
+    "                    ax.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0], color=\"red\")\n",
+    "                    # plt.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0])\n",
+    "        ax.set_title(f\"image index: {image_index} | p2nm: {image_data['pixel_to_nm_scaling']:.2f}\")\n",
+    "    plt.suptitle(f\"{category} n={len(indices)}\", fontsize=32)\n",
+    "    plt.show()"
    ]
   }
  ],
