Add a lot of exploratory work

--- a/beaks-initial-investigation.ipynb
+++ b/beaks-initial-investigation.ipynb
@@ -13,6 +13,7 @@
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from topostats.io import LoadScans\n",
     "\n",
@@ -56,7 +57,7 @@
     "print(f\"num: {len(image_dict)}\")\n",
     "\n",
     "# save to pickle\n",
-    "images_before_processing_dir = base_dir / f\"images-before-processing\"\n",
+    "images_before_processing_dir = base_dir / f\"images-topostats-processed\"\n",
     "images_before_processing_dir.mkdir(exist_ok=True)\n",
     "with open(images_before_processing_dir / f\"image-dict-{today}.pkl\", \"wb\") as f:\n",
     "    pickle.dump(image_dict, f)"
@@ -86,6 +87,21 @@
     "        # plt.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0])\n",
     "plt.title(f\"image index: {image_index} | p2nm: {image_data['pixel_to_nm_scaling']:.2f}\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_categories = {}\n",
+    "new_categories[\"magpie\"] = [6, 7, 35, 60, 63, 84, 106, 110, 113, 115, 132, 51]\n",
+    "new_categories[\"hummingbird\"] = [29, 30, 36, 67, 72, 73, 85, 96, 105, 109, 112, 118, 120, 124, 17, 14]\n",
+    "# save to text file in base dir\n",
+    "with open(base_dir / \"categories.txt\", \"w\") as f:\n",
+    "    for category, indices in new_categories.items():\n",
+    "        f.write(f\"{category}: {indices}\\n\")"
    ]
   },
   {
