add regular spacing for points and angle per nm calculations

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -17,6 +17,8 @@
     "import numpy as np\n",
     "\n",
     "from topostats.io import LoadScans\n",
+    "from topostats.measure.curvature import \\\n",
+    "    discrete_angle_difference_per_nm_circular\n",
     "\n",
     "today = datetime.today().strftime(\"D-%Y-%m-%d-T-%H-%M\")\n",
     "print(today)"
@@ -52,7 +54,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = all_files[0]\n",
+    "def interpolate_between_two_points(point1, point2, distance):\n",
+    "    distance_between_points = np.linalg.norm(point2 - point1)\n",
+    "    if distance_between_points < distance:\n",
+    "        raise ValueError(\"distance between points is less than the desired interval\")\n",
+    "    proportion = distance / distance_between_points\n",
+    "    new_point = point1 + proportion * (point2 - point1)\n",
+    "    return new_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = all_files[1]\n",
     "\n",
     "# load the file\n",
     "loadscans = LoadScans([file], channel=\"dummy\")\n",
@@ -63,11 +80,111 @@
     "print(data.keys())\n",
     "\n",
     "image = data[\"image\"]\n",
-    "ordered_traces = data[\"ordered_traces\"]\n",
+    "splining_data = data[\"splining\"][\"above\"]\n",
     "plt.imshow(image)\n",
+    "plt.show()\n",
     "\n",
-    "plt.show()"
+    "for grain_index, grain_splining_data in splining_data.items():\n",
+    "    for molecule_index, molecule_splining_data in grain_splining_data.items():\n",
+    "        print(molecule_splining_data.keys())\n",
+    "        splined_coords = molecule_splining_data[\"spline_coords\"]\n",
+    "        bbox = molecule_splining_data[\"bbox\"]\n",
+    "        # plt.plot(ordered_coords[:, 1] + bbox[1], ordered_coords[:, 0] + bbox[0], \"r-\")\n",
+    "\n",
+    "        grain_image = image[bbox[0] : bbox[2], bbox[1] : bbox[3]]\n",
+    "        plt.imshow(grain_image)\n",
+    "\n",
+    "        curvatures = data[\"grain_curvature_stats\"][\"above\"][grain_index][molecule_index]\n",
+    "        print(f\"len curvatures: {len(curvatures)}\")\n",
+    "        print(f\"len ordered trace: {len(splined_coords)}\")\n",
+    "        for splined_coord_index, splined_coord in enumerate(splined_coords):\n",
+    "            # plot line between current and previous point with colour based on curvature\n",
+    "            if splined_coord_index == 0:\n",
+    "                continue\n",
+    "            prev_coord = splined_coords[splined_coord_index - 1]\n",
+    "            curvature = curvatures[splined_coord_index - 1]\n",
+    "            normalised_curvature = (curvature - min(curvatures)) / (max(curvatures) - min(curvatures))\n",
+    "            plt.plot(\n",
+    "                [prev_coord[1], splined_coord[1]],\n",
+    "                [prev_coord[0], splined_coord[0]],\n",
+    "                c=(normalised_curvature, normalised_curvature, normalised_curvature),\n",
+    "            )\n",
+    "        plt.show()\n",
+    "\n",
+    "        plt.plot(curvatures)\n",
+    "        plt.show()\n",
+    "\n",
+    "        # plot zoom in of trace points\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "        for splined_coord_index, splined_coord in enumerate(splined_coords):\n",
+    "            curvature = curvatures[splined_coord_index]\n",
+    "            normalised_curvature = (curvature - min(curvatures)) / (max(curvatures) - min(curvatures))\n",
+    "            plt.plot(\n",
+    "                splined_coord[1],\n",
+    "                splined_coord[0],\n",
+    "                \".\",\n",
+    "                c=(normalised_curvature, 1 - normalised_curvature, normalised_curvature),\n",
+    "                markersize=1,\n",
+    "            )\n",
+    "        plt.gca().invert_yaxis()\n",
+    "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
+    "        plt.show()\n",
+    "\n",
+    "        # resample the spline to get points at fixed intervals\n",
+    "        interval = 5\n",
+    "\n",
+    "        resampled_points = []\n",
+    "        resampled_points.append(splined_coords[0])\n",
+    "        current_spline_index = 1\n",
+    "        while True:\n",
+    "            current_point = resampled_points[-1]\n",
+    "            next_splined_point = splined_coords[current_spline_index]\n",
+    "            distance_to_next_splined_point = np.linalg.norm(next_splined_point - current_point)\n",
+    "            # if the distance to the next splined point is less than the interval, then skip to the next point\n",
+    "            if distance_to_next_splined_point < interval:\n",
+    "                current_spline_index += 1\n",
+    "                if current_spline_index >= len(splined_coords):\n",
+    "                    break\n",
+    "                continue\n",
+    "            new_interpolated_point = interpolate_between_two_points(current_point, next_splined_point, interval)\n",
+    "            resampled_points.append(new_interpolated_point)\n",
+    "\n",
+    "        resampled_points = np.array(resampled_points)\n",
+    "\n",
+    "        resampled_curvatures = discrete_angle_difference_per_nm_circular(resampled_points)\n",
+    "\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "        for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
+    "            curvature = resampled_curvatures[resampled_point_index]\n",
+    "            normalised_curvature = (curvature - min(resampled_curvatures)) / (\n",
+    "                max(resampled_curvatures) - min(resampled_curvatures)\n",
+    "            )\n",
+    "            plt.plot(\n",
+    "                resampled_point[1],\n",
+    "                resampled_point[0],\n",
+    "                \"o\",\n",
+    "                c=(normalised_curvature, 1 - normalised_curvature, normalised_curvature),\n",
+    "                markersize=5,\n",
+    "            )\n",
+    "        plt.gca().invert_yaxis()\n",
+    "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
+    "        plt.show()\n",
+    "\n",
+    "        curvature_threshold = 0.35\n",
+    "\n",
+    "        plt.plot(resampled_curvatures, label=\"discrete curvatures\")\n",
+    "        plt.plot(np.abs(resampled_curvatures), label=\"discrete absolute cuvatures\")\n",
+    "        plt.legend()\n",
+    "        plt.ylim(-0.1, 0.5)\n",
+    "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
